# Checkerboard-Marker-Based-Lightweight-AR-System

./: .gitignore  CMakeLists.txt  README.md  augmentor.cpp  augmentor.hpp  calibrator.cpp  calibrator.hpp  capture_helpers.cpp  capture_helpers.hpp  checkerboard_tracker.cpp  checkerboard_tracker.hpp  chessboard_tracker.hpp  create_summary_table.py  jsonHelper.cpp  jsonHelper.hpp  main.cpp  main.py  nft_tracker.hpp  openGLrenderer.cpp  openGLrenderer.hpp  statistics.cpp  statistics.hpp  tracker.hpp
data/calibration/28x19/: calibration.json
data/calibration/8x6/: calibration.json
data/statistics/Checkerboard/detection_robustness/: session_stats_checkerboard_angle.json  session_stats_checkerboard_lighting.json  session_stats_checkerboard_occlusion.json  session_stats_checkerboard_occlusion_old.json
data/statistics/Checkerboard/pose_stability/: session_stats_checkerboard.json
data/statistics/NFT/detection_robustness/: session_stats_nft_angle.json  session_stats_nft_lighting.json  session_stats_nft_occlusion.json
data/statistics/NFT/pose_stability/: session_stats_nft.json
shaders/: cube.frag  cube.vert
